fix: body shifted to global.css

--- a/src/app/Profile/Profile.module.css
+++ b/src/app/Profile/Profile.module.css
@@ -3,9 +3,6 @@
     flex-direction: column;
     background-color: #dfdfdf;
 }  */
-body {
-  background-color: #dfdfdf;
-}
 
 .profileImage {
   border-radius: 50%;
